--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Flores y corazones Athe </title>
+  <title>❤️</title>
   <style>
     *,
 *::after,
